Fix 'csv writer generates invalid file in case field delimiter is used in any field'

This commit fixes all fields which may have field separators like
payee, acccount, category, memo, number and money related fields.

Additional fixes:
- the commit also handle double quotes inside string fields according
  RFC 4180

Note: The previous implementation removed single quotes from memo fields,
which is now applied to all string fields because all string fields are
formatted by the same method. If this could be removed, please file a
related request.

BUG:395025
FIXED-IN:4.8.3

Test Plan: compiled and exported to csv on linux

Reviewers: #kmymoney, tbaumgart

Reviewed By: tbaumgart

Subscribers: tbaumgart

Differential Revision: https://phabricator.kde.org/D13330

Signed-off-by: Ralf Habacker <ralf.habacker@freenet.de>